<resources>
    <string name="app_name">TDL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TO DO LIST</string>
    <string name="nav_header_subtitle">Enlist your work task</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_feedback">Feedack</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_newTask">New Task</string>
</resources>